--- a/my-new-project/spindl/package.json
+++ b/my-new-project/spindl/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^31.0.2",
+    "jwt-decode": "^2.2.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-simple-radio-button": "^2.7.3",
